--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 .App {
     font-family: sans-serif;
     text-align: center;
-   
+    margin: 0 auto;
+    margin-top: 10px;
   }
-  .container {
+  
+  .test {
     border: 5 px solid;
     border-color: brown;
     padding: 20px;
